[gd_scene load_steps=45 format=3 uid="uid://cali6q4pooh6b"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_1hsk7"]
[ext_resource type="Texture2D" uid="uid://dp6rvpywn7uu0" path="res://Art/sprites/legs.png" id="2_ljb2m"]
[ext_resource type="Texture2D" uid="uid://0ayqc1a7gplf" path="res://Art/sprites/Body_Holding_Pump.png" id="4_77n33"]
[ext_resource type="Script" path="res://Scripts/gun_manager.gd" id="5_7cqo6"]
[ext_resource type="Texture2D" uid="uid://dbj4y3ffvy6af" path="res://Art/sprites/Shotgun_Pump.png" id="5_8yl6t"]
[ext_resource type="Texture2D" uid="uid://c0g7f2mq7fs8k" path="res://Art/sprites/HEad.png" id="5_y3yf8"]
[ext_resource type="Resource" uid="uid://doh2lubfongh0" path="res://Scripts/weapon resources/Pump.tres" id="6_cv1px"]
[ext_resource type="Resource" uid="uid://ql2tdfp65gja" path="res://Scripts/weapon resources/Semi.tres" id="7_3e4sf"]
[ext_resource type="Texture2D" uid="uid://dgxdghrkcqfva" path="res://Art/sprites/Shotgun_SemiAuto.png" id="7_ooyx5"]
[ext_resource type="Resource" uid="uid://braxnwkf7dvyj" path="res://Scripts/weapon resources/Double.tres" id="8_5810a"]
[ext_resource type="Texture2D" uid="uid://yjgqfurfivcd" path="res://Art/sprites/Shotgun_Double.png" id="8_qxtpx"]
[ext_resource type="Script" path="res://Scripts/dynamic_camera.gd" id="9_ugpvv"]

[sub_resource type="Animation" id="Animation_6rxdk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Torso:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Torso/Head:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Torso/gun_manager/Pump:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Torso/gun_manager/Semi:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Torso/gun_manager/Double:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lhfn1"]
resource_name = "head_idle"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_v2h4e"]
resource_name = "Idle"
length = 0.05
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h76xk"]
resource_name = "Walk"
length = 0.600007
loop_mode = 1
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 5, 6, 7, 9, 11]
}

[sub_resource type="Animation" id="Animation_vc0nq"]
resource_name = "shotgun2_idle"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Double:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rkuch"]
resource_name = "shotgun_double_ooa"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Double:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.20001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_dwyx2"]
resource_name = "shotgun2_reload"
length = 1.00001
loop_mode = 1
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Double:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0]
}

[sub_resource type="Animation" id="Animation_etrpm"]
resource_name = "shotgun2_reload_oneshell"
length = 0.857157
loop_mode = 1
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Double:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 6, 7, 4, 5, 0]
}

[sub_resource type="Animation" id="Animation_84w5y"]
resource_name = "shotgun00_pump"
length = 0.40001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Pump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_pttqf"]
resource_name = "shotgun00_idle"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Pump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ysf8f"]
resource_name = "shotgun_pump_ooa"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Pump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_24luj"]
resource_name = "shotgun_pump_reload"
length = 0.150005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Pump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 2, 0]
}

[sub_resource type="Animation" id="Animation_40w76"]
resource_name = "shotgun1_cycle"
length = 0.160004
loop_mode = 1
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Semi:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}

[sub_resource type="Animation" id="Animation_w8wv2"]
resource_name = "shotgun1_idle"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Semi:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kv4ly"]
resource_name = "shotgun_semi_ooa"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Semi:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_bk532"]
resource_name = "shotgun1_reload"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/gun_manager/Semi:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_0syly"]
resource_name = "torso_idle"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_c5w7o"]
resource_name = "torso_reload"
length = 0.200004
loop_mode = 1
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_ir6t2"]
resource_name = "torso_shotgun_pump"
length = 0.45
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_et7et"]
_data = {
"RESET": SubResource("Animation_6rxdk"),
"head_idle": SubResource("Animation_lhfn1"),
"legs_idle": SubResource("Animation_v2h4e"),
"legs_walk": SubResource("Animation_h76xk"),
"shotgun_double_idle": SubResource("Animation_vc0nq"),
"shotgun_double_ooa": SubResource("Animation_rkuch"),
"shotgun_double_reload_bothshells": SubResource("Animation_dwyx2"),
"shotgun_double_reload_oneshell": SubResource("Animation_etrpm"),
"shotgun_pump_cycle": SubResource("Animation_84w5y"),
"shotgun_pump_idle": SubResource("Animation_pttqf"),
"shotgun_pump_ooa": SubResource("Animation_ysf8f"),
"shotgun_pump_reload": SubResource("Animation_24luj"),
"shotgun_semi_cycle": SubResource("Animation_40w76"),
"shotgun_semi_idle": SubResource("Animation_w8wv2"),
"shotgun_semi_ooa": SubResource("Animation_kv4ly"),
"shotgun_semi_reload": SubResource("Animation_bk532"),
"torso_idle": SubResource("Animation_0syly"),
"torso_reload_placeholder": SubResource("Animation_c5w7o"),
"torso_shotgun_pump": SubResource("Animation_ir6t2")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4r24e"]
animation = &"legs_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a5lp7"]
animation = &"legs_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tlpua"]
animation = &"legs_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oyofe"]
animation = &"legs_walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_10vuu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4r24e")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_a5lp7")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_tlpua")
blend_point_2/pos = 0.0
blend_point_3/node = SubResource("AnimationNodeAnimation_oyofe")
blend_point_3/pos = 1.0
min_space = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7kon6"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_juky7"]
states/Start/position = Vector2(125, 100)
states/legs_motion/node = SubResource("AnimationNodeBlendSpace1D_10vuu")
states/legs_motion/position = Vector2(315, 100)
transitions = ["Start", "legs_motion", SubResource("AnimationNodeStateMachineTransition_7kon6")]
graph_offset = Vector2(-183, -37)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uxw0n"]
animation = &"head_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wqlxh"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wo044"]
states/head_idle/node = SubResource("AnimationNodeAnimation_uxw0n")
states/head_idle/position = Vector2(333, 96)
transitions = ["Start", "head_idle", SubResource("AnimationNodeStateMachineTransition_wqlxh")]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ohubf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ns8m5"]
radius = 8.5

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("player_legs", "player_torso")]
script = ExtResource("1_1hsk7")
player_legs = NodePath("Legs")
player_torso = NodePath("Torso")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_et7et")
}

[node name="LegsAnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_et7et")
}
tree_root = SubResource("AnimationNodeStateMachine_juky7")
anim_player = NodePath("../AnimationPlayer")
parameters/legs_motion/blend_position = -0.0533033

[node name="HeadAnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_et7et")
}
tree_root = SubResource("AnimationNodeStateMachine_wo044")
anim_player = NodePath("../AnimationPlayer")

[node name="GunAnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_et7et")
}
tree_root = SubResource("AnimationNodeStateMachine_ohubf")
anim_player = NodePath("../AnimationPlayer")

[node name="BodyAnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_et7et")
}
tree_root = SubResource("AnimationNodeStateMachine_wo044")
anim_player = NodePath("../AnimationPlayer")

[node name="Placeholder" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_ns8m5")

[node name="Legs" type="Sprite2D" parent="."]
texture = ExtResource("2_ljb2m")
hframes = 3
vframes = 4

[node name="Torso" type="Sprite2D" parent="."]
texture = ExtResource("4_77n33")
offset = Vector2(0, -7)
hframes = 2
vframes = 2

[node name="Head" type="Sprite2D" parent="Torso"]
texture = ExtResource("5_y3yf8")
vframes = 2

[node name="gun_manager" type="Node2D" parent="Torso" node_paths=PackedStringArray("animation_player")]
script = ExtResource("5_7cqo6")
animation_player = NodePath("../../AnimationPlayer")
_weapon_resources = Array[Resource("res://Scripts/shotgun_resource.gd")]([ExtResource("6_cv1px"), ExtResource("7_3e4sf"), ExtResource("8_5810a")])
start_weapons = Array[String](["Pump", "Semi"])

[node name="Pump" type="Sprite2D" parent="Torso/gun_manager"]
position = Vector2(0, -24)
texture = ExtResource("5_8yl6t")
hframes = 2
vframes = 2

[node name="Semi" type="Sprite2D" parent="Torso/gun_manager"]
visible = false
position = Vector2(0, -24)
texture = ExtResource("7_ooyx5")
hframes = 2
vframes = 2

[node name="Double" type="Sprite2D" parent="Torso/gun_manager"]
visible = false
position = Vector2(0, -27)
texture = ExtResource("8_qxtpx")
hframes = 3
vframes = 3

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("9_ugpvv")
camera_target_factor = 4.0

[connection signal="animation_finished" from="AnimationPlayer" to="Torso/gun_manager" method="_on_animation_player_animation_finished"]
